Thêm chức năng thanh toán v1.0